# MusicSync

./: .gitignore  Cargo.toml  README.md  caseStudy.md  config_template.toml
.github/workflows/: auto-format.yml
src/: main.rs  utils.rs
src/nodes/: mod.rs  test.rs
src/nodes/audio/: fft.rs  filterbank.rs  mod.rs
src/nodes/general/: array.rs
src/utils/: audiodevices.rs  audioprocessing.rs  benchmark.rs  config.rs  hue.rs  lights.rs  plot.rs  serialize.rs
src/utils/audioprocessing/: hfc.rs  ml.rs  mod.rs  spectral_flux.rs  threshold.rs
src/utils/lights/: color.rs  console.rs  envelope.rs  hue.rs  mod.rs  serialize.rs  wled.rs
