[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
bytes = "1.5.0"
ciborium = "0.2.2"
colored = "2.1.0"
cpal = "0.15.2"
gethostname = "0.4.3"
log = "0.4.21"
plotters = "0.3.5"
pretty_env_logger = "0.5.0"
realfft = "3.3.0"
reqwest = {version = "0.11.24", features = ["json"]}
rodio = "0.17.3"
rustfft = "6.2.0"
serde = "1.0.197"
tokio = "1.36.0"
toml = "0.8.10"
webrtc-dtls = "0.9.0"
