[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
bytes = "1.7.1"
ciborium = "0.2.2"
colored = "2.1.0"
cpal = "0.15.3"
dashmap = "6.1.0"
gethostname = "0.5.0"
log = "0.4.21"
plotters = "0.3.7"
pretty_env_logger = "0.5.0"
realfft = "3.3.0"
reqwest = {version = "0.12", features = ["json"]}
rodio = "0.19"
rustfft = "6.2.0"
serde = "1.0.210"
tokio = {version = "1.40", features = ["signal", "net"]}
toml = "0.8"
webrtc-dtls = "0.10.0"
